--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # dependencies
 /node_modules
 
+
 # misc
 .env.local
 .env.development.local
@@ -21,3 +22,8 @@ yarn-error.log*
 backend.zip
 newbackend.zip
 /.vs
+
+# db config
+backend/db.py
+
+*.pyc
